// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main: dry run should glob the expected files and run the configured generators 1`] = `
"/**
 * @file This file is auto-generated. Do not modify its contents manually.
 */

import get from 'lodash-es/get';

export function byHello(property, defaultReturn) {
  return get(property, ['hello'], defaultReturn);
}
"
`;

exports[`main: dry run should glob the expected files and run the configured generators 2`] = `
"/**
 * @file This file is auto-generated. Do not modify its contents manually.
 */

export const byHelloPath = () => ['hello'];
"
`;

exports[`main: dry run should glob the expected files and run the configured generators 3`] = `
"/**
 * @file This file is auto-generated. Do not modify its contents manually.
 */

import get from 'lodash-es/get';

export function byWorld(property, defaultReturn) {
  return get(property, ['world'], defaultReturn);
}
"
`;

exports[`main: dry run should glob the expected files and run the configured generators 4`] = `
"/**
 * @file This file is auto-generated. Do not modify its contents manually.
 */

export const byWorldPath = () => ['world'];
"
`;
